--- a/milo_session4_hw.html
+++ b/milo_session4_hw.html
@@ -11,7 +11,9 @@
         padding: 20px 20px 20px 20px ;
         border: black solid 1px;
         border-width: solid 220px;
-        border-radius: 25px
+        margin-bottom: auto;
+        margin-top: auto;
+        border-radius: 25px;
     }
 
     </style>
