--- a/moma.html
+++ b/moma.html
@@ -3,48 +3,194 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOMA</title>
+    <title>MoMa</title>
     <link rel="stylesheet" href="moma.css">
 </head>
 <body>
     <div id="container">
         <div id="header">
             <div id="left-header">
-            <img src="https://store.moma.org/on/demandware.static/Sites-moma-Site/-/default/dw913a8356/images/MoMA_Store_Logo_New.svg" alt="">
+                <img src="https://store.moma.org/on/demandware.static/Sites-moma-Site/-/default/dw913a8356/images/MoMA_Store_Logo_New.svg" alt="">
             </div>
             <div id="right-header">
-                <form>
-                    <input type="text" placeholder="Search">
-                </form>
-                <img src="https://store.moma.org/on/demandware.static/Sites-moma-Site/-/en_US/v1599278828038/images/newicons/account_icon.svg" alt="">
-                <img src="https://store.moma.org/on/demandware.static/Sites-moma-Site/-/en_US/v1599278828038/images/newicons/cart_icon.svg" alt="">
-
+                <div>
+                    <form>
+                        <input type="text" placeholder="Search">
+                    </form>
+                </div>
+                <div>
+                    <img src="https://store.moma.org/on/demandware.static/Sites-moma-Site/-/en_US/v1599278828038/images/newicons/account_icon.svg" alt="">
+                </div>
+                <div>
+                    <img src="https://store.moma.org/on/demandware.static/Sites-moma-Site/-/en_US/v1599278828038/images/newicons/cart_icon.svg" alt="">
+                </div>
+                
+            </div>
+        </div> <!-- end of id Header -->
+        <div id="navigation">
+            <ul>
+                <li><a href="#">New</a></li>
+                <li><a href="#">For the Home</a></li>
+                <li><a href="#">Office</a></li>
+                <li><a href="#">Tech</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Print & Artists</a></li>
+                <li><a href="#">Books</a></li>
+                <li><a href="#">Kids</a></li>
+                <li><a href="#">Only at MoMa</a></li>
+                <li><a href="#">Holiday</a></li>
+                <li><a href="#">Gifts</a></li>
+                <li><a href="#">Sale</a></li>
+            </ul>
+        </div>     
+        <div id="featured">
+            <a href="#"><img src="https://store.moma.org/on/demandware.static/-/Sites/default/dw8076c6c9/images/2020_FallArrivals_main1_d.jpg" alt=""></a>
+        </div> 
+        <div id="featured-products">
+            <div class="featured-product-box">
+                <img src="https://store.moma.org/on/demandware.static/-/Sites-moma-Library/default/dw9cf851d8/images/20200908_HP_2_NewKids.jpg" alt="">
+                <h3>New Ways to Play</h3>
+                <p>Our latest kid's design has arrived</p>
+                <p><a href="#">Shop New Kids</a></p>
+            </div>
+            <div class="featured-product-box">
+                <img src="https://store.moma.org/on/demandware.static/-/Sites-moma-Library/default/dw167cf33b/images/20200908_HP_3_DesignWork.jpg" alt="">
+                <h3>New Ways to Play</h3>
+                <p>Our latest kid's design has arrived</p>
+                <p><a href="#">Shop New Kids</a></p>
+            </div>
+            <div class="featured-product-box">
+                <img src="https://store.moma.org/on/demandware.static/-/Sites-moma-Library/default/dw9cf851d8/images/20200908_HP_2_NewKids.jpg" alt="">
+                <h3>New Ways to Play</h3>
+                <p>Our latest kid's design has arrived</p>
+                <p><a href="#">Shop New Kids</a></p>
+            </div>
+        </div> <!-- end of featured products -->
+        <div id="best-sellers">
+            <h2>Best Sellers</h2>
+            <div id="best-sellers-container">
+                <div>
+                    <img src="https://store.moma.org/dw/image/v2/BBQC_PRD/on/demandware.static/-/Sites-master-moma/default/dwd08fb5b7/images/152700_a.jpg?sw=468&sh=468&sm=cut" alt="">
+                    <h4>Two-Way Side Table</h4>
+                </div>
+                <div>
+                    <img src="https://store.moma.org/dw/image/v2/BBQC_PRD/on/demandware.static/-/Sites-master-moma/default/dw41dab95c/images/152644_a.jpg?sw=468&sh=468&sm=cut" alt="">
+                    <h4>Two-Way Side Table</h4>
+                </div>
+                <div>
+                    <img src="https://store.moma.org/dw/image/v2/BBQC_PRD/on/demandware.static/-/Sites-master-moma/default/dw0da865a7/images/152676_a.jpg?sw=468&sh=468&sm=cut" alt="">
+                    <h4>Two-Way Side Table</h4>
+                </div>
+                <div>
+                    <img src="https://store.moma.org/dw/image/v2/BBQC_PRD/on/demandware.static/-/Sites-master-moma/default/dwa68e0450/images/152684_a.jpg?sw=468&sh=468&sm=cut" alt="">
+                    <h4>Two-Way Side Table</h4>
+                </div>
+                <div>
+                    <img src="https://store.moma.org/dw/image/v2/BBQC_PRD/on/demandware.static/-/Sites-master-moma/default/dwc4da7c98/images/152853_a.jpg?sw=468&sh=468&sm=cut" alt="">
+                    <h4>Two-Way Side Table</h4>
+                </div>
+                <div>
+                    <img src="https://store.moma.org/dw/image/v2/BBQC_PRD/on/demandware.static/-/Sites-master-moma/default/dwff70b05b/images/153013_a.jpg?sw=468&sh=468&sm=cut" alt="">
+                    <h4>Two-Way Side Table</h4>
+                </div>
             </div>
         </div>
 
     </div>
-    <div id="navigation">
-        <ul>
-        <li><a href="#">New</a></li>
-        <li><a href="#">For the Home</a></li>
-        <li><a href="#">Office</a></li>
-        <li><a href="#">Tech</a></li>
-        <li><a href="#">Accesories</a></li>
-        <li><a href="#">Print & Artists</a></li>
-        <li><a href="#">Books</a></li>
-        <li><a href="#">Kids</a></li>
-        <li><a href="#">Only at MoMa</a></li>
-        <li><a href="#">Holiday</a></li>
-        <li><a href="#">Gifts</a></li>
-        <li><a href="#">Sale</a></li>
-        </ul>
+    <div id="shipping">
+        <div>
+            <h2>Free Shipping for Members</h2>
+            <p>Every day on orders of $35 or more.</p>
+            <div id="learn"><a href="#">Learn More</a></div>
+        </div>
+        <div>
+            <img src="https://store.moma.org/on/demandware.static/-/Sites-moma-Library/default/dw7b52ca4c/images/footer_truck.svg" alt="">
+        </div>
     </div>
-    <div id="content">
-        <div id="left-box" class="content-group"><h3>Now through Monday!</h3><h1 class="box1">Labor day</h1><h1 class="box1">Weekend Sale</h1>
-        <a href="#"><div id="sales"><h3>Shop Sale</h3></div></div></a>
-        <div id="right-box" class="content-group"><div id="text1"><h1 class="box2">Take an extra 20%</h1></div>
-        <h1 class="box1"> off* sale items</h1>
-        <h3 class="text-group1">Use code LABORDAY</h3><h3 class="text-group1">Online in stores.</h3></div>
+    <div id="footer">
+        <h2 class="words">Get Email Updates</h2>
+        <div id="newsletter">
+            <form action="" method="GET">
+                <div class="newsletter-form">
+                    <input type="text">
+                    <button type="submit">Sign Up</button>
+                </div>
+            </form>
+        </div>
+        <div id="social-media">
+            <ul>
+                <li><a href="#"><img src="https://img.icons8.com/ios/2x/instagram-new.png" width="25" height="25" alt=""></a></li>
+                <li><a href="#"><img src="https://img.pngio.com/black-youtube-logo-logodix-black-youtube-logo-500_500.png" width="25" height="25" alt=""></a></li>
+                <li><a href="#"><img src="https://img.icons8.com/ios/452/pinterest.png" width="25" height="25" alt=""></a></li>
+                <li><a href="#"><img src="https://i.pinimg.com/originals/ca/3b/f0/ca3bf05cfab74677e5b73b130bd30991.png" width="25" height="25" alt=""></a></li>
+
+            </ul>
+        </div>
+        <div id="linkcontain">
+            <div class="links">
+                <ul>
+                    <li><a>Help + Info</a></li>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">Customer Service</a></li>
+                    <li><a href="#">Member Information</a></li>
+                    <li><a href="#">International Orders</a></li>
+                    <li><a href="#">Ordering</a></li>
+                    <li><a href="#">Shipping</a></li>
+                    <li><a href="#">Track Order</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Gift Cards</a></li>
+                    <li><a href="#">Gift Wrap</a></li>
+                    <li><a href="#">Trade Program</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a>About Us</a></li>
+                    <li><a href="#">View Online Catalog</a></li>
+                    <li><a href="#">Request a Catalog</a></li>
+                    <li><a href="#">About Our Stores</a></li>
+                    <li><a href="#">Why We're Different</a></li>
+                    <li><a href="#">Different by Design</a></li>
+                    <li><a href="#">MoMA Wholesale</a></li>
+                    <li><a href="#">Accessibility</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a>Our Stores</a></li>
+                    <li><a href="#">Store Events</a></li>
+                    <li><a href="#">Museum Store, NYC</a></li>
+                    <li><a href="#">Design Store, 53rd St. NYC</a></li>
+                    <li><a href="#">Design Store, Soho, NYC</a></li>
+                    <li><a href="#">Design Store, Tokyo</a></li>
+                    <li><a href="#">Design Store, Kyoto</a></li>
+                    <li><a href="#">Design Store, Hong Kong</a></li>
+                    <li><a href="#">Japan Online Store</a></li>
+                    <li><a href="#">Hong Kong Online Store</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a>24/7</a></li>
+                    <li><a>800.851.4509</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Become a Member</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="copyright-contain">
+            <div class="copyrights">
+                <h5>&copy;2020 MoMA Design Store All Rights Reserved.</h5>
+            </div>
+            <div class="copyrights">
+                <h5>Privacy Policy | Terms & Conditions | Sitemap</h5>
+            </div>
+            <div id="visitmoma">
+                <a href="#"><h3>Visit MoMA.org</h3></a>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
